--- a/api/pom.xml
+++ b/api/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
         <artifactId>dubbo-demo</artifactId>
-        <groupId>io.kuaibao</groupId>
+        <groupId>zhao</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -19,6 +19,6 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>kuaibao-provider-api</finalName>
+        <finalName>zhao-provider-api</finalName>
     </build>
 </project>
