--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
         <artifactId>dubbo-demo</artifactId>
-        <groupId>io.kuaibao</groupId>
+        <groupId>zhao</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -18,7 +18,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>io.kuaibao</groupId>
+            <groupId>zhao</groupId>
             <artifactId>api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
